--- a/index-english.html
+++ b/index-english.html
@@ -76,7 +76,13 @@
 
         <!-- Category Selection -->
         <div id="category-selection" class="mb-8 hidden">
-            <h2 class="text-2xl font-bold text-center mb-6">Choose Category</h2>
+            <div class="flex justify-between items-center mb-6">
+                <button id="back-to-sections-btn" class="bg-slate-500 text-white px-4 py-2 rounded-lg hover:bg-slate-600 transition-colors">
+                    ← Back to Sections
+                </button>
+                <h2 class="text-2xl font-bold text-center">Choose Category</h2>
+                <div class="w-24"></div> <!-- Spacer for centering -->
+            </div>
             <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
                 <button class="category-btn bg-white p-4 rounded-xl shadow-md hover:shadow-lg transition-all text-center" data-category="food">
                     <div class="text-3xl mb-2">🍽️</div>
